Introductie van API 2.0.0 onder de api/v2 URL.
